...
        ) {
            Button(
                onClick = {
                    if (step == 0) step = artworksList.size-1 else step-=1
                }
            ) {
                Text("Previous")
            }
            Button(
                onClick = {
                    if (step == artworksList.size-1) step = 0 else step+=1
                }
            ) {
                Text("Next")
            }
        }
    }
}

@Composable
...
